fix output wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@ input:focus {
 }
 
 #output {
-    white-space: pre;
+    white-space: pre-wrap;
     padding-top: 2em;
 
     font-size: 14pt;
